
syntax = "proto3";

package table;

option go_package = "github.com/coschain/contentos-go/app/table";

import "prototype/multi_id.proto";

message so_extPostCreated {
	uint64                                 post_id                 =      1;
    prototype.post_created_order           created_order           =      2;
      
}


message so_list_extPostCreated_by_created_order {
	prototype.post_created_order        	created_order       = 1;
	uint64                              	post_id             = 2;
}


message so_unique_extPostCreated_by_post_id {
	uint64                              	post_id             = 1;
}
